--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,10 @@
 # prevent it from being included in the site.
 
 main:
+
+  - title: "News"
+    url: /year-archive/
+
   - title: "Projects"
     url: /projects/
     
@@ -19,9 +23,6 @@ main:
     
  # - title: "Portfolio"
  #   url: /portfolio/
-        
-  # - title: "Blog Posts"
-  #  url: /year-archive/
     
   - title: "CV"
     url: /cv/
