--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Blog"
+    url: http://blog.yooking.top  
 
 #  - title: "Teaching"
 #   url: /teaching/    
